fix z-index of header

--- a/_sass/_jekyll_theme.scss
+++ b/_sass/_jekyll_theme.scss
@@ -42,6 +42,7 @@ h1, h2, h3, h4, h5, h6 { font-size: 100%; font-weight: 400; }
   background-color: white;
   position: fixed;
   width: 100%;
+  z-index: 1;
 }
 
 .site-title,
